--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,7 @@
 @import "tailwindcss";
-@plugin "daisyui" {
-  themes: all;
-}
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
