--- a/src/htmlplayer.css
+++ b/src/htmlplayer.css
@@ -1,215 +1,222 @@
 .videoPlayerContainer {
-    -webkit-align-items: center;
-    align-items: center;
-    background: #000!important;
-    bottom: 0;
-    display: -webkit-flex;
-    display: flex;
-    left: 0;
-    position: fixed!important;
-    right: 0;
-    top: 0
+        -webkit-align-items: center;
+        align-items: center;
+        background: #000 !important;
+        bottom: 0;
+        display: -webkit-flex;
+        display: flex;
+        left: 0;
+        position: fixed !important;
+        right: 0;
+        top: 0
 }
 
 .videoPlayerContainer-onTop {
-  z-index: 1000;
-  color: white;
-  position: fixed;
-  padding: 1em;
-  top: 0;
-  display: flex;
-  align-items: center;
+        z-index: 1000;
+        color: white;
+        position: fixed;
+        padding: 1em;
+        top: 0;
+        display: flex;
+        align-items: center;
 }
 
 .videoPlayerContainer .libassjs-canvas-parent {
-    -webkit-order: -1;
-    order: -1
+        -webkit-order: -1;
+        order: -1
 }
 
 video[controls]::-webkit-media-controls {
-    display: none!important
+        display: none !important
 }
 
 video {
-  z-index: -1;
-    position: fixed;
-  left: 0;
-  top: 0;
+        z-index: -1;
+        position: fixed;
+        left: 0;
+        top: 0;
 }
 
 .htmlvideoplayer {
-    height: 100%;
-    margin: 0!important;
-    padding: 0!important;
-    width: 100%
+        height: 100%;
+        margin: 0 !important;
+        padding: 0 !important;
+        width: 100%
 }
 
 .htmlvideoplayer::cue {
-    background-color: transparent;
-    text-shadow: .14em .14em .14em #000;
-    -webkit-font-smoothing: antialiased;
-    font-family: inherit;
-    line-height: normal
+        background-color: transparent;
+        text-shadow: .14em .14em .14em #000;
+        -webkit-font-smoothing: antialiased;
+        font-family: inherit;
+        line-height: normal
 }
 
 .videoPlayerContainer .libassjs-canvas-parent {
-    -webkit-order: -1;
-    order: -1
+        -webkit-order: -1;
+        order: -1
 }
 
 .videoPlayerController {
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  bottom: 0;
-  width: 100%;
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        bottom: 0;
+        width: 100%;
 }
 
 .controls {
-  display: flex;
-  align-items: center;
-  bottom: 0;
+        display: flex;
+        align-items: center;
+        bottom: 0;
 }
 
 .button {
-  cursor: pointer;
-  padding: 1em;
+        cursor: pointer;
+        padding: 0.7em;
 }
 
-.info {
-  margin-left: auto;
-}
-
-.tooltip  {
-  display: none;
-  background-color: #7f7f7f;
-  padding: 0.4em;
-  border-radius: 1em;
-  text-align: center;
-  height: auto;
+.tooltip {
+        display: none;
+        background-color: #7f7f7f;
+        padding: 0.4em;
+        border-radius: 1em;
+        text-align: center;
+        height: auto;
 }
 
 .tooltip.show {
-  width: auto;
-  height: auto;
-  position: absolute;
-  display: block;
-  bottom: 4em;
-  left: 0;
+        width: auto;
+        height: auto;
+        position: absolute;
+        display: block;
+        bottom: 4em;
+        left: 0;
 }
 
 .sliderContainer {
-  width: 100%;
-  height: 0.5em;
-  display: flex;
-  cursor: pointer;
+        width: 100%;
+        height: 0.5em;
+        display: flex;
+        cursor: pointer;
 }
 
 .sliderForeground {
-  height: 100%;
-  background-color: #d9d9d9;
+        height: 100%;
+        background-color: #d9d9d9;
 }
+
 .sliderBackground {
-  height: 100%;
-  background-color: #353535;
+        height: 100%;
+        background-color: #353535;
 }
 
 .seek {
-  display: flex;
-  width: 100%;
-  margin-block: 1em;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 10px;
+        display: flex;
+        width: 100%;
+        margin-block: 1em;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 10px;
 }
 
 .currenttime {
-  margin-inline: 1em;
-  min-width: 5%;
-  text-align: left;
+        margin-inline: 1em;
+        min-width: 5%;
+        text-align: left;
 }
+
 .endtime {
-  margin-inline: 1em;
-  min-width: 5%;
-  text-align: right;
+        margin-inline: 1em;
+        min-width: 5%;
+        text-align: right;
 }
 
 .progress {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 100%;
-  height: 6px;
-  border-radius: 3px;
-  background: linear-gradient(to right, #d3d6da 45%, #2f2f2f 45%);
-  outline: none;
-  cursor: pointer;
-  transition: background 0.3s ease;
+        -webkit-appearance: none;
+        appearance: none;
+        width: 100%;
+        height: 6px;
+        border-radius: 3px;
+        background: linear-gradient(to right, #d3d6da 45%, #2f2f2f 45%);
+        outline: none;
+        cursor: pointer;
+        transition: background 0.3s ease;
 }
 
 /* Update gradient dynamically with JS */
 .progress::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  background: #ffffff;
-  border: 1px solid #888;
-  cursor: pointer;
-  transition: transform 0.1s ease;
+        -webkit-appearance: none;
+        appearance: none;
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+        background: #ffffff;
+        border: 1px solid #888;
+        cursor: pointer;
+        transition: transform 0.1s ease;
 }
 
 .progress::-webkit-slider-thumb:hover {
-  transform: scale(1.1);
+        transform: scale(1.1);
 }
 
-video::-webkit-media-controls { display: none !important; }
+video::-webkit-media-controls {
+        display: none !important;
+}
 
 .progress::-moz-range-thumb {
-  width: 14px;
-  height: 16px;
-  border-radius: 50%;
-  background: #ffffff;
-  border: 1px solid #888;
-  cursor: pointer;
+        width: 14px;
+        height: 16px;
+        border-radius: 50%;
+        background: #ffffff;
+        border: 1px solid #888;
+        cursor: pointer;
 }
 
 .progress::-moz-range-track {
-  background: transparent;
+        background: transparent;
+}
+
+.volumeControlContainer {
+        width: 15%;
+        margin-left: auto;
 }
 
 .nerdinfo {
-  display: block;
-  position: absolute;
-  top: 6.5em;
-  padding: 1em;
-  margin: 0.5em;
-  width: auto;
-  height: auto;
-  background-color: #161a1d;
-  z-index: 100;
-  opacity: 90%;
-  border-radius: 1em;
-  font-size: 0.6em;
-  line-height: 1.5em;
+        display: block;
+        position: absolute;
+        top: 6.5em;
+        padding: 1em;
+        margin: 0.5em;
+        width: auto;
+        height: auto;
+        background-color: #161a1d;
+        z-index: 100;
+        opacity: 90%;
+        border-radius: 1em;
+        font-size: 0.6em;
+        line-height: 1.5em;
 }
 
 .nerdinfo.hidden {
-  display: block;
+        display: block;
 }
 
 .playerStat-stats {
-  margin-bottom: 1em;
-  font-weight: bold;
+        margin-bottom: 1em;
+        font-weight: bold;
 }
 
 .playerStat-stat {
-  display: flex;
+        display: flex;
 }
+
 .playerStat-label {
-  font-weight: bold;
-  margin-inline: 1em;
+        font-weight: bold;
+        margin-inline: 1em;
 }
+
 .playerStat-value {
-  font-weight:normal;
+        font-weight: normal;
 }
